--- a/.github/actions/config-env/action.yml
+++ b/.github/actions/config-env/action.yml
@@ -199,7 +199,7 @@ runs:
           # Previous deployment exists. Update provisioned resources in case template has changed.
           if [  "$deployment_exists" = true ]; then
             echo "🔶 | Previous deployment exists. Updating provisioned resources in case template has changed..."
-            azd env set AZURE_PRINCIPAL_TYPE ‘ServicePrincipal’
+            azd env set AZURE_PRINCIPAL_TYPE 'ServicePrincipal'
             azd provision --no-prompt
           fi
         fi
